--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
     "@lourenci/react-kanban": "^0.14.0",
     "@types/googlemaps": "^3.39.6",
     "@types/markerclustererplus": "^2.1.33",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "axios": "^0.24.0",
     "body-scroll-lock": "^2.7.1",
     "chart.js": "^2.8.0",
