*Several Fixes; *Redux stores added; *Stepzilla upgrade

--- a/frontend/public/api/appointments.json
+++ b/frontend/public/api/appointments.json
@@ -1,121 +1,28 @@
 [
-    {
-        "id": 1,
-        "title": "Jesica Alba - Presencial",
-        "startTime": "08:30 AM",
-        "endTime": "09:00 AM",
-        "start": "2022-02-11",
-        "end": "2022-02-11",
-        "patientName": "Jesica Alba",
-        "patientAge": "35",
-        "patientSex": "f",
-        "patientNationalId": "35769315",
-        "patientBirthDate": "02/03/1984",
-        "patientHealthInsurance": "OSDE",
-        "patientHealthInsuranceId": "0800123131215",
-        "patientHealthRecordId": "123671873",
-        "patientEmail": "email@ejemplo.com",
-        "doctorName": "Tayhana Ortolá",
-        "doctorSpeciality": "Clínica Médica",
-        "status": "active"
+  {
+    "id": 1,
+    "title": "Jesica Alba - Presencial",
+    "description": "Descripción del turno.",
+    "startTime": "08:30 AM",
+    "endTime": "09:00 AM",
+    "start": "2022-02-11",
+    "end": "2022-02-11",
+    "patient": {
+      "name": "Jesica Alba",
+      "age": "35",
+      "sex": "f",
+      "nationalId": 35769315,
+      "birthDate": "02/03/1984",
+      "patientNationalId": "35769315",
+      "patientBirthDate": "02/03/1984",
+      "healthInsurance": "OSDE",
+      "healthInsuranceId": "0800123131215",
+      "healthRecordId": "123671873",
+      "email": "email@ejemplo.com"
     },
-    {
-        "id": 2,
-        "title": "Manuel Mandeb - Presencial",
-        "startTime": "09:00 AM",
-        "endTime": "09:30 AM",
-        "start": "2022-02-12",
-        "patientName": "Manuel Mandeb",
-        "patientAge": "31",
-        "patientSex": "m",
-        "patientNationalId": "35569315",
-        "patientBirthDate": "02/03/1978",
-        "patientHealthInsurance": "Swiss Medical",
-        "patientHealthInsuranceId": "0800168831215",
-        "patientHealthRecordId": "9823873",
-        "patientEmail": "email@ejemplo.com",
-        "doctorName": "Tayhana Ortolá",
-        "doctorSpeciality": "Clínica Médica",
-        "status": "pending"
-    },
-
-    {
-        "id": 3,
-        "title": "Agustina Cherri - Presencial",
-        "startTime": "09:30 AM",
-        "endTime": "10:00 AM",
-        "start": "11/02/2022",
-        "patientName": "Agustina Cherri",
-        "patientAge": "22",
-        "patientSex": "f",
-        "patientNationalId": "24569315",
-        "patientBirthDate": "02/03/1982",
-        "patientHealthInsurance": "AMUTMIN",
-        "patientHealthInsuranceId": "08001231755215",
-        "patientHealthRecordId": "453671873",
-        "patientEmail": "email@ejemplo.com",
-        "doctorName": "Tayhana Ortolá",
-        "doctorSpeciality": "Clínica Médica",
-        "status": "pending"
-    },
-
-    {
-        "id": 4,
-        "title": "Sandra Velzquez - Presencial",
-        "startTime": "10:00 AM",
-        "endTime": "10:30 AM",
-        "start": "11/02/2022",
-        "patientName": "Sandra Velzquez",
-        "patientAge": "66",
-        "patientSex": "f",
-        "patientNationalId": "33129315",
-        "patientBirthDate": "02/03/1977",
-        "patientHealthInsurance": "OSDE",
-        "patientHealthInsuranceId": "08002234131215",
-        "patientHealthRecordId": "15243671873",
-        "patientEmail": "email@ejemplo.com",
-        "doctorName": "Alberto Ortiz",
-        "doctorSpeciality": "Pediatría",
-        "status": "active"
-    },
-
-    {
-        "id": 5,
-        "title": "Agustín Vázquez - Presencial",
-        "startTime": "10:30 AM",
-        "endTime": "11:00 AM",
-        "start": "11/02/2022",
-        "patientName": "Agustín Vázquez",
-        "patientAge": "31",
-        "patientSex": "m",
-        "patientNationalId": "35569315",
-        "patientBirthDate": "02/03/1990",
-        "patientHealthInsurance": "AMUTMIN",
-        "patientHealthInsuranceId": "0800188931215",
-        "patientHealthRecordId": "123671873",
-        "patientEmail": "email@ejemplo.com",
-        "doctorName": "Tayhana Ortolá",
-        "doctorSpeciality": "Clínica Médica",
-        "status": "canceled"
-    },
-
-    {
-        "id": 6,
-        "title": "Serapio Garcia - Presencial",
-        "startTime": "11:00 AM",
-        "endTime": "11:30 AM",
-        "start": "11 Feb. 2022",
-        "patientName": "Serapio Garcia",
-        "patientAge": "78",
-        "patientSex": "m",
-        "patientNationalId": "11569315",
-        "patientBirthDate": "02/03/1980",
-        "patientHealthInsurance": "OSDE",
-        "patientHealthInsuranceId": "0800123131124",
-        "patientHealthRecordId": "666671873",
-        "patientEmail": "email@ejemplo.com",
-        "doctorName": "Tayhana Ortolá",
-        "doctorSpeciality": "Clínica Médica",
-        "status": "completed"
-    }
+    "doctor": { "name": "Tayhana Ortolá", "speciality": "Clínica Médica" },
+    "type": "turno",
+    "mode": "presencial",
+    "status": "active"
+  }
 ]
