--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "mongoose-unique-validator": "^3.0.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
-    "multer-storage-cloudinary": "^4.0.0"
+    "multer-storage-cloudinary": "^4.0.0",
+    "moment": "^2.26.0"
   },
   "devDependencies": {
     "concurrently": "^7.0.0",
