--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "@material-ui/icons": "^4.11.2",
     "@types/googlemaps": "^3.39.6",
     "@types/markerclustererplus": "^2.1.33",
+    "apexcharts": "^3.35.2",
     "axios": "^0.24.0",
     "body-scroll-lock": "^2.7.1",
     "chart.js": "^2.8.0",
@@ -41,6 +42,7 @@
     "node-sass": "^6.0.1",
     "react": "^17.0.1",
     "react-ace": "^9.1.2",
+    "react-apexcharts": "^1.3.9",
     "react-big-calendar": "^0.22.1",
     "react-bootstrap": "^1.6.4",
     "react-bootstrap-typeahead": "^3.4.7",
