--- a/frontend/src/data/app_config.json
+++ b/frontend/src/data/app_config.json
@@ -1,18 +1,12 @@
 {
-    "auth0" : {
-        "domain": "Your Auth Domain",
-        "clientID": "Your clientId",
-        "redirectUri": "Your callback URL"
-    },
-    "firebase" : {
-        "apiKey": "Your Firebase API",
-        "authDomain":"Your Firebase AuthDomain",
-        "databaseURL": "Your Firebase Database URL",
-        "projectId": "Your Firebase ProjectID",
-        "storageBucket": "Your Firebase StorageBucket Id",
-        "messagingSenderId": "Your Firebase SenderId",
-        "appId":"Your Firebase APP Id"
-    },
-    "jwt_token" : "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VybmFtZSI6IkpvaG4iLCJwYXNzd29yZCI6IjEyMzQ1NiJ9.vPN0PhthyTuf9l3912NksmpzHXvWjZ7Nywhe22GK2zI"
+  "firebase": {
+    "apiKey": "AIzaSyCzEn9VWaSSCo4kX0pXv9oamIyOa6vCHMM",
+    "authDomain": "co-med-a09ae.firebaseapp.com",
+    "databaseURL": "Your Firebase Database URL",
+    "projectId": "co-med-a09ae",
+    "storageBucket": "co-med-a09ae.appspot.com",
+    "messagingSenderId": "97836475775",
+    "appId": "1:97836475775:web:eda8f6d48ad60d72f7264a",
+    "measurementId": "G-9KHDCE9BQS"
+  }
 }
-
