--- a/package.json
+++ b/package.json
@@ -28,21 +28,20 @@
   },
   "homepage": "https://github.com/avazquezcendron/co-med#readme",
   "dependencies": {
-    "@emailjs/browser": "^3.5.0",
     "bcryptjs": "^2.4.3",
-    "cloudinary": "^1.29.0",
     "colors": "^1.4.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-async-handler": "^1.2.0",
     "fast-two-sms": "^3.0.0",
+    "firebase": "^9.8.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.26.0",
     "mongoose": "^6.2.9",
     "mongoose-unique-validator": "^3.0.0",
     "morgan": "^1.10.0",
-    "multer": "^1.4.4",
-    "multer-storage-cloudinary": "^4.0.0",
-    "moment": "^2.26.0"
+    "nodemailer": "^6.7.5",
+    "nodemailer-express-handlebars": "^5.0.0"
   },
   "devDependencies": {
     "concurrently": "^7.0.0",
