--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "express-async-handler": "^1.2.0",
     "fast-two-sms": "^3.0.0",
     "firebase": "^9.8.1",
+    "jsondiffpatch": "^0.4.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.26.0",
     "mongoose": "^6.2.9",
