Fix: change manifest and icons for PWA

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Co-Med",
+  "name": "Co-Med",
   "icons": [
     {
       "src": "favicon.ico",
